minikube/networking/ingress/yorkie-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # using nginx ingress controller for minikube environment
  name: yorkie-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /yorkie.v1.YorkieService
            pathType: Prefix
            backend:
              service:
                name: envoy-service
                port:
                  number: 8080
          - path: /yorkie.v1.AdminService
            pathType: Prefix
            backend:
              service:
                name: envoy-service
                port:
                  number: 9090
          # uncomment this section if you deployed monitoring manifests
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: grafana-service
          #       port:
          #         number: 3000
